<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    style="@style/BackgroundLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/BackgroundLayout">

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/iv_border"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_ac_bridge_circuit"
                android:layout_width="250dp"
                android:layout_height="185dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:onClick="onClick"
                app:srcCompat="@drawable/ac_bridge_circuit" />

        </LinearLayout>

        <TextView
            android:id="@+id/ac_bridge_circuit"
            style="@style/TextViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/ac_bridge_circuits"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_ac_bridge_circuit"
            style="@style/TextViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/id_ac_bridge_circuits" />

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/iv_border"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_dc_bridge_circuit"
                android:layout_width="250dp"
                android:layout_height="185dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:onClick="onClick"
                app:srcCompat="@drawable/dc_bridge_circuit" />

        </LinearLayout>

        <TextView
            android:id="@+id/dc_bridge_circuit"
            style="@style/TextViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/dc_bridge_circuits"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_dc_bridge_circuit"
            style="@style/TextViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/id_dc_bridge_circuits" />

    </LinearLayout>

</ScrollView>